add variables to control heights

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,3 +2,7 @@ $color-primary: rgb(87, 156, 136);
 $color-secondary: rgb(247, 202, 83);
 
 $font-primary: "Europa";
+
+$header-height: 110px;
+$header-height-media-small: 85px;
+$footer-height: 60px;
