--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,7 +6,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: $footer-height;
   background-color: $color-primary;
   a {
     padding: 0 20px;
