--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,14 @@
 header {
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: $header-height;
   background-color: $color-primary;
+  @include media-small {
+    height: $header-height-media-small;
+  }
   h1 {
-    margin: 20px 0;
+    margin: 0;
     font-size: 3.6rem;
     font-weight: bold;
     color: $color-secondary;
