--- a/sass/pages/_legal.scss
+++ b/sass/pages/_legal.scss
@@ -1,11 +1,15 @@
 .legal {
-  margin: 8px;
+  display: inline-block;
+  padding: 8px 8px calc(8px + #{$footer-height}) 8px;
+  min-height: calc(100vh - #{$header-height});
   color: black;
+  @include media-small {
+    min-height: calc(100vh - #{$header-height-media-small});
+  }
   h2,
   .effect {
     text-align: center;
   }
-
   .article {
     font-weight: bold;
   }
