--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,8 +8,7 @@ body {
 }
 
 main {
-  display: flex;
-  justify-content: center;
+  @include flex-center;
   flex-wrap: wrap;
   width: 100%;
   max-width: 1079px;
