--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,18 +1,17 @@
 header {
-  display: flex;
-  justify-content: center;
+  @include flex-center;
   align-items: center;
   height: $header-height;
   background-color: $color-primary;
-  @include media-small {
-    height: $header-height-media-small;
+  @include media-phone {
+    height: $header-height-media-phone;
   }
   h1 {
     margin: 0;
     font-size: 3.6rem;
     font-weight: bold;
     color: $color-secondary;
-    @include media-small {
+    @include media-phone {
       margin: 15px 0 15px 0;
       font-size: 2.8rem;
     }
