--- a/sass/pages/_menu_page.scss
+++ b/sass/pages/_menu_page.scss
@@ -15,7 +15,7 @@
         font-size: 3.5rem;
         font-family: map-get($theme, title-family);
         font-weight: 100;
-        @include media-small {
+        @include media-phone {
           margin: 10px 0;
           font-size: 2rem;
         }
@@ -30,7 +30,7 @@
         font-family: map-get($theme, text-family);
         font-size: 1.2rem;
         font-weight: bold;
-        @include media-small {
+        @include media-phone {
           text-align: center;
           margin-top: 30px;
           font-size: 0.9rem;
@@ -39,7 +39,7 @@
         .line-menu-1,
         .line-menu-3 {
           width: 250px;
-          @include media-small {
+          @include media-phone {
             width: 83px;
           }
         }
@@ -65,12 +65,12 @@
     align-items: center;
     text-align: center;
     padding-top: 65px;
-    @include media-small {
+    @include media-phone {
       padding-top: 45px;
     }
     .icon-music {
       width: 75px;
-      @include media-small {
+      @include media-phone {
         width: 50px;
       }
     }
@@ -83,7 +83,7 @@
       width: 100%;
       font-size: 2.2rem;
       color: black;
-      @include media-small {
+      @include media-phone {
         font-size: 1.5rem;
       }
     }
@@ -91,20 +91,19 @@
 
   &__footer {
     padding-bottom: 90px;
-    @include media-small {
+    @include media-phone {
       padding-bottom: 45px;
     }
   }
 
   &__container {
-    display: flex;
+    @include flex-center;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 80%;
     box-shadow: 0 0 6px #ccc;
     margin: 0 auto 60px auto;
-    @include media-small {
+    @include media-phone {
       width: 90%;
       margin: 0 auto 30px auto;
     }
@@ -114,7 +113,7 @@
     text-align: center;
     width: 85%;
     color: black;
-    @include media-small {
+    @include media-phone {
       text-align: left;
       width: 90%;
     }
@@ -137,11 +136,11 @@
 
     p {
       display: flex;
-      flex-flow: row nowrap;
       justify-content: space-between;
+      flex-flow: row nowrap;
       font-size: 1rem;
       margin: 20px;
-      @include media-small {
+      @include media-phone {
         margin: 20px 0;
         font-size: 0.8rem;
       }
@@ -150,7 +149,7 @@
         padding-left: 20px;
         font-size: 1.1rem;
         font-weight: bold;
-        @include media-small {
+        @include media-phone {
           font-size: 0.8rem;
         }
       }
