--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,6 +5,12 @@ body {
 
 .bloc-page {
   background-color: white;
+  padding: 8px 8px calc(8px + #{$footer-height}) 8px;
+  min-height: calc(100vh - #{$header-height});
+  color: black;
+  @include media-tablet {
+    min-height: calc(100vh - #{$header-height-media});
+  }
 }
 
 main {
@@ -14,4 +20,7 @@ main {
   max-width: 1079px;
   margin: auto;
   padding: 20px 0;
+  @include media-tablet {
+    padding: 10px 0 20px 0;
+  }
 }
