--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -7,9 +7,13 @@
   margin: 20px;
   padding: 20px;
   box-shadow: 0 0 6px #ccc;
+  @include media-tablet {
+    max-width: 270px;
+    min-height: 345px;
+  }
   @include media-phone {
     max-width: 250px;
-    min-height: 345px;
+    min-height: 315px;
   }
 }
 
