--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,16 +3,18 @@ header {
   align-items: center;
   height: $header-height;
   background-color: $color-primary;
-  @include media-phone {
-    height: $header-height-media-phone;
+  @include media-tablet {
+    height: $header-height-media;
   }
   h1 {
     margin: 0;
     font-size: 3.6rem;
     font-weight: bold;
     color: $color-secondary;
+    @include media-tablet {
+      font-size: 3.3rem;
+    }
     @include media-phone {
-      margin: 15px 0 15px 0;
       font-size: 2.8rem;
     }
   }
