--- a/sass/pages/_menu_page.scss
+++ b/sass/pages/_menu_page.scss
@@ -25,25 +25,28 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        text-align: center;
         margin-top: 60px;
         margin-bottom: 30px;
         font-family: map-get($theme, text-family);
         font-size: 1.2rem;
         font-weight: bold;
         @include media-phone {
-          text-align: center;
           margin-top: 30px;
           font-size: 0.9rem;
         }
 
-        .line-menu-1,
+        .line-menu,
         .line-menu-3 {
           width: 250px;
+          @include media-tablet {
+            width: 190px;
+          }
           @include media-phone {
             width: 83px;
           }
         }
-        .line-menu-1:last-child,
+        .line-menu:last-child,
         .line-menu-2:last-child {
           transform: rotate(180deg);
         }
@@ -70,6 +73,9 @@
     }
     .icon-music {
       width: 75px;
+      @include media-tablet {
+        width: 70px;
+      }
       @include media-phone {
         width: 50px;
       }
@@ -103,8 +109,10 @@
     width: 80%;
     box-shadow: 0 0 6px #ccc;
     margin: 0 auto 60px auto;
-    @include media-phone {
+    @include media-tablet {
       width: 90%;
+    }
+    @include media-phone {
       margin: 0 auto 30px auto;
     }
   }
@@ -113,7 +121,7 @@
     text-align: center;
     width: 85%;
     color: black;
-    @include media-phone {
+    @include media-tablet {
       text-align: left;
       width: 90%;
     }
@@ -174,7 +182,7 @@
         .underline::after {
           background-color: $value;
         }
-        .line-menu-1 path,
+        .line-menu path,
         .line-menu-2 path,
         .line-menu-3 path {
           fill: $value;
