--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -7,7 +7,7 @@
   font-weight: normal;
   background-color: $color-primary;
   color: $color-secondary;
-  @include media-phone {
+  @include media-small {
     padding: 10px 20px;
     font-size: 1.4rem;
   }
@@ -19,18 +19,18 @@
 }
 
 $breakpoints: (
-  phone: 500px,
-  tablet: 1000px,
+  small: 500px,
+  medium: 1000px,
 );
 
-@mixin media-tablet {
-  @media screen and (max-width: map-get($breakpoints, tablet)) {
+@mixin media-medium {
+  @media screen and (max-width: map-get($breakpoints, medium)) {
     @content;
   }
 }
 
-@mixin media-phone {
-  @media screen and (max-width: map-get($breakpoints, phone)) {
+@mixin media-small {
+  @media screen and (max-width: map-get($breakpoints, small)) {
     @content;
   }
 }
