--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -3,13 +3,13 @@
     h3 {
       margin: 10px 0 0 0;
       font-size: 2.9rem;
-      @include media-phone {
+      @include media-small {
         font-size: 2rem;
       }
     }
     h4 {
       font-size: 1.4rem;
-      @include media-phone {
+      @include media-small {
         font-size: 1rem;
       }
     }
@@ -24,17 +24,17 @@
       p {
         font-family: "Devonshire", "cursive";
         font-size: 2.5rem;
-        @include media-phone {
+        @include media-small {
           font-size: 1.7rem;
         }
       }
       .icon-music {
         width: 50px;
         margin-right: 20px;
-        @include media-tablet {
+        @include media-medium {
           width: 45px;
         }
-        @include media-phone {
+        @include media-small {
           width: 30px;
           margin-right: 10px;
         }
@@ -45,16 +45,16 @@
   &--le-chic-a-la-francaise {
     h3 {
       font-size: 2.3rem;
-      @include media-phone {
+      @include media-small {
         font-size: 1.3rem;
       }
     }
     .line-menu-2 {
       width: 245px;
-      @include media-tablet {
+      @include media-medium {
         width: 180px;
       }
-      @include media-phone {
+      @include media-small {
         width: 110px;
       }
     }
