--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,7 +8,7 @@ body {
   padding: 8px 8px calc(8px + #{$footer-height}) 8px;
   min-height: calc(100vh - #{$header-height});
   color: black;
-  @include media-tablet {
+  @include media-medium {
     min-height: calc(100vh - #{$header-height-media});
   }
 }
@@ -20,7 +20,7 @@ main {
   max-width: 1079px;
   margin: auto;
   padding: 20px 0;
-  @include media-tablet {
+  @include media-medium {
     padding: 8px 0 20px 0;
   }
 }
