--- a/sass/pages/_legal.scss
+++ b/sass/pages/_legal.scss
@@ -3,7 +3,7 @@
   padding: 8px 8px calc(8px + #{$footer-height}) 8px;
   min-height: calc(100vh - #{$header-height});
   color: black;
-  @include media-tablet {
+  @include media-medium {
     min-height: calc(100vh - #{$header-height-media});
   }
   h2,
